re PR middle-end/34762 (internal compiler error: in delete_output_reload, at reload1.c:7958)

PR middle-end/34762
	* reload.c (find_reloads_toplev): Use rtx_equal_p to compare x and mem.

From-SVN: r131508